--- a/CustomRPC/MainForm.ko.resx
+++ b/CustomRPC/MainForm.ko.resx
@@ -308,4 +308,10 @@
   <data name="supportersToolStripMenuItem.Text" xml:space="preserve">
     <value>도움을 주신 분들</value>
   </data>
+  <data name="radioButtonPresence.Text" xml:space="preserve">
+    <value>활동 상태가 업데이트 되었을 때부터</value>
+  </data>
+  <data name="radioButtonPresence.ToolTip" xml:space="preserve">
+    <value>연결되거나 활동 상태가 업데이트되고 얼마나 지났는지를 표시합니다.</value>
+  </data>
 </root>
