--- a/CustomRPC/MainForm.zh-Hans.resx
+++ b/CustomRPC/MainForm.zh-Hans.resx
@@ -278,7 +278,7 @@
     <value>180, 22</value>
   </data>
   <data name="aboutToolStripMenuItem.Text" xml:space="preserve">
-    <value>关于。。。</value>
+    <value>关于...</value>
   </data>
   <data name="helpToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>43, 20</value>
@@ -427,7 +427,7 @@
     <value>语言</value>
   </data>
   <data name="checkForUpdatesToolStripMenuItem.Text" xml:space="preserve">
-    <value>查看新更新。。。</value>
+    <value>查看新更新...</value>
   </data>
   <data name="autoconnectToolStripMenuItem.Text" xml:space="preserve">
     <value>自动连接</value>
@@ -446,5 +446,11 @@
   </data>
   <data name="supportersToolStripMenuItem.Text" xml:space="preserve">
     <value>赞助者</value>
+  </data>
+  <data name="radioButtonPresence.Text" xml:space="preserve">
+    <value>自上次状态更新以来</value>
+  </data>
+  <data name="radioButtonPresence.ToolTip" xml:space="preserve">
+    <value>显示自上次的连接或更新状态以来所经过的时间。</value>
   </data>
 </root>
