--- a/CustomRPC/MainForm.pt-BR.resx
+++ b/CustomRPC/MainForm.pt-BR.resx
@@ -435,4 +435,7 @@ Para ter efeito, ambos os campos devem ser maiores que 0.</value>
   <data name="radioButtonPresence.Text" xml:space="preserve">
     <value>Desde a última atualização do Rich Presence</value>
   </data>
+  <data name="radioButtonPresence.ToolTip" xml:space="preserve">
+    <value>Mostra quanto tempo se passou desde que você conectou ou atualizou o Rich Presence pela última vez.</value>
+  </data>
 </root>
