--- a/CustomRPC/Strings.it.resx
+++ b/CustomRPC/Strings.it.resx
@@ -176,6 +176,6 @@ Premi Sì per resettare le impostazioni oppure premi No per uscire.</value>
     <value>Si è verificato un errore durante il salvataggio delle impostazioni:</value>
   </data>
   <data name="errorLoadingAssembly" xml:space="preserve">
-    <value>Aggiungere il percorso "{0}" alle eccezioni antivirus. Reinstallare CustomRP se l'errore persiste</value>
+    <value>Aggiungere il percorso "{0}" alle eccezioni antivirus. Reinstallare CustomRP se l'errore persiste.</value>
   </data>
 </root>
