--- a/CustomRPC/Strings.ta.resx
+++ b/CustomRPC/Strings.ta.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,112 +117,65 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="&gt;&gt;richTextBoxReport.Name" xml:space="preserve">
-    <value>richTextBoxReport</value>
+  <data name="error" xml:space="preserve">
+    <value>பிழை</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>384, 361</value>
+  <data name="errorNoID" xml:space="preserve">
+    <value>ஐடி எதுவும் குறிப்பிடப்படவில்லை!</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="$this.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 3, 4, 3</value>
+  <data name="errorUpdateFailed" xml:space="preserve">
+    <value>புதுப்பிப்பைப் பதிவிறக்குவதில் அல்லது நிறுவுவதில் பிழை.
+மீண்டும் முயற்சிக்க "ஆம்" அல்லது கைமுறையாகப் பதிவிறக்க "இல்லை" என்பதை அழுத்தவும்.</value>
   </data>
-  <data name="&gt;&gt;labelInfo.ZOrder" xml:space="preserve">
-    <value>0</value>
+  <data name="firstTimeRun" xml:space="preserve">
+    <value>முதல் முறை ஓட்டம்</value>
   </data>
-  <data name="buttonOK.Location" type="System.Drawing.Point, System.Drawing">
-    <value>155, 326</value>
+  <data name="firstTimeRunText" xml:space="preserve">
+    <value>கையேட்டைத் திறக்க விரும்புகிறீர்களா?
+உதவி -&gt; கையேட்டைத் திற அல்லது F1ஐ அழுத்துவதன் மூலம் எப்போது வேண்டுமானாலும் திறக்கலாம்.</value>
   </data>
-  <data name="labelInfo.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing">
-    <value>MiddleCenter</value>
+  <data name="information" xml:space="preserve">
+    <value>தகவல்</value>
   </data>
-  <data name="&gt;&gt;labelInfo.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="statusConnected" xml:space="preserve">
+    <value>இணைக்கப்பட்டது</value>
   </data>
-  <data name="&gt;&gt;richTextBoxReport.ZOrder" xml:space="preserve">
-    <value>2</value>
+  <data name="statusConnecting" xml:space="preserve">
+    <value>இணைக்கிறது...</value>
   </data>
-  <data name="labelInfo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>360, 38</value>
+  <data name="statusConnectionFailed" xml:space="preserve">
+    <value>இணைப்பு தோல்வியடைந்தது (Discord இயங்குகிறதா?)</value>
   </data>
-  <data name="&gt;&gt;buttonOK.ZOrder" xml:space="preserve">
-    <value>1</value>
+  <data name="statusDisconnected" xml:space="preserve">
+    <value>துண்டிக்கப்பட்டது</value>
   </data>
-  <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Tahoma, 9pt</value>
+  <data name="statusError" xml:space="preserve">
+    <value>இணைப்பு பிழை (தவறான ஐடி?)</value>
   </data>
-  <data name="$this.Text" xml:space="preserve">
-    <value>Error Report</value>
+  <data name="errorInvalidURL" xml:space="preserve">
+    <value>பொத்தான்(களுக்கு) தவறான URL குறிப்பிடப்பட்டுள்ளது அல்லது உரை மிக நீளமாக உள்ளது!</value>
   </data>
-  <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>ErrorReportViewer</value>
+  <data name="errorNoInternet" xml:space="preserve">
+    <value>இணையத்துடன் இணைக்க முடியவில்லை!</value>
   </data>
-  <data name="richTextBoxReport.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
-    <value>4, 10, 4, 3</value>
+  <data name="noUpdatesFound" xml:space="preserve">
+    <value>புதுப்பிப்புகள் எதுவும் இல்லை!</value>
   </data>
-  <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Form, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="errorCorruptSettings" xml:space="preserve">
+    <value>அமைப்புகள் கோப்பு சிதைந்துள்ளது.
+அமைப்புகளை மீட்டமைக்க ஆம் என்பதை அழுத்தவும், வெளியேறுவதற்கு இல்லை என்பதை அழுத்தவும்.</value>
   </data>
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>7, 14</value>
+  <data name="errorInvalidPresetFile" xml:space="preserve">
+    <value>முன்னமைவை இறக்குமதி செய்ய முடியவில்லை; கோப்பு காணவில்லை, சிதைந்துள்ளது அல்லது சரியாக வடிவமைக்கப்படவில்லை.</value>
   </data>
-  <data name="&gt;&gt;labelInfo.Name" xml:space="preserve">
-    <value>labelInfo</value>
+  <data name="askAnalyticsConsent" xml:space="preserve">
+    <value>உங்கள் பயன்பாட்டு பகுப்பாய்வுகளை டெவலப்பருக்கு அனுப்ப CustomRP ஐ அனுமதிக்கிறீர்களா?
+(அனைத்து தரவுகளும் தனிப்பயனாக்கப்பட்டவை.)</value>
   </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="labelInfo.TabIndex" type="System.Int32, mscorlib">
-    <value>0</value>
+  <data name="errorSavingSettings" xml:space="preserve">
+    <value>அமைப்புகளைச் சேமிக்கும்போது பிழை ஏற்பட்டது:</value>
   </data>
-  <data name="&gt;&gt;buttonOK.Parent" xml:space="preserve">
-    <value>$this</value>
+  <data name="errorLoadingAssembly" xml:space="preserve">
+    <value>உங்கள் வைரஸ் தடுப்பு விதிவிலக்குகளில் "{0}" பாதையைச் சேர்க்கவும். இந்த பிழை தொடர்ந்தால் CustomRP ஐ மீண்டும் நிறுவவும்.</value>
   </data>
-  <data name="richTextBoxReport.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
-  </data>
-  <data name="richTextBoxReport.Location" type="System.Drawing.Point, System.Drawing">
-    <value>13, 57</value>
-  </data>
-  <data name="&gt;&gt;buttonOK.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
-    <value>CenterParent</value>
-  </data>
-  <data name="labelInfo.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Tahoma, 12pt</value>
-  </data>
-  <data name="richTextBoxReport.Size" type="System.Drawing.Size, System.Drawing">
-    <value>358, 263</value>
-  </data>
-  <data name="labelInfo.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 9</value>
-  </data>
-  <data name="&gt;&gt;labelInfo.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;richTextBoxReport.Type" xml:space="preserve">
-    <value>System.Windows.Forms.RichTextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="buttonOK.TabIndex" type="System.Int32, mscorlib">
-    <value>2</value>
-  </data>
-  <data name="labelInfo.Text" xml:space="preserve">
-    <value>CustomRP has crashed in the previous session due to the following unhandled exception:</value>
-  </data>
-  <data name="&gt;&gt;buttonOK.Name" xml:space="preserve">
-    <value>buttonOK</value>
-  </data>
-  <data name="buttonOK.Size" type="System.Drawing.Size, System.Drawing">
-    <value>74, 23</value>
-  </data>
-  <data name="buttonOK.Text" xml:space="preserve">
-    <value>OK</value>
-  </data>
-  <data name="&gt;&gt;richTextBoxReport.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
 </root>
